Restyle front-page

--- a/home.hbs
+++ b/home.hbs
@@ -1,5 +1,20 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
+<style>
+    .featured-image-wrap img {
+        height: 200px;
+        margin: 0 auto;
+    }
+    .featured-image-wrap {
+        border: solid 1px black;
+    }
+    .blog-info {
+        color: #067934
+    }
+    .blog-meta-time {
+        color: #666666
+    }
+</style>
 <div class="main">
     <section class="section-topic">
         <div class="container">
@@ -9,31 +24,27 @@
                     {{#get "posts" include="authors" filter="tag:{{slug}}+visibility:[public,members,paid]" limit="3" order="published_at asc"}}
                     {{#foreach posts visibility="all"}}
                      <div class="col-lg-4">
+                        {{#if feature_image}}
+                        <div class="featured-image-wrap">
+                            <img src="{{feature_image}}" alt="{{name}}" class="topic-image">
+                        </div>
+                        {{/if}}
+                        <p class="blog-info">Blog <br />
+                        {{#foreach authors limit="1"}}
+                            {{name}}
+                        {{/foreach}}
+                        <time class="blog-meta-tima" datetime="{{date format="YYYY-MM-DD"}}">
+                            {{date published_at timeago="true"}} - {{reading_time}}
+                        </time>
+                            </p>
                         
-                     
-                        
-                        <div class="topic-card{{#if feature_image}} has-image{{/if}}">
-                            <p style="color:green">Blog <br />
-                            {{#foreach authors}}
-                                {{name}}  
-                            {{/foreach}}
-                            <time style="color:gray" datetime="{{date format="YYYY-MM-DD"}}">
-                                {{date published_at timeago="true"}}
-                            </time>
-                             </p>
-                            {{#if feature_image}}
-                            <div class="featured-image-wrap">
-                                <img src="{{feature_image}}" alt="{{name}}" class="topic-image">
-                            </div>
+                        <div class="card-content">
+                            <h2 class="h3 topic-name"><a href="{{url}}">{{title}}</a></h2>
+                            {{#if excerpt}}
+                            <p class="topic-description">
+                                {{excerpt}}
+                            </p>
                             {{/if}}
-                            <div class="card-content">
-                                <h2 class="h3 topic-name"><a href="{{url}}">{{title}}</a></h2>
-                                {{#if excerpt}}
-                                <p class="topic-description">
-                                    {{excerpt}}
-                                </p>
-                                {{/if}}
-                            </div>
                         </div>
                     </div>
                     {{/foreach}}
