--- a/assets/scss/components/_common.scss
+++ b/assets/scss/components/_common.scss
@@ -249,7 +249,7 @@ blockquote {
     // font-style: italic;
     // margin-bottom: 3rem;
     border-left: 4px solid var(--theme-color);
-    // border-left: 4px solid $text-color-light;
+    // border-left: 4px solid $text-color-normal;
     // color: $text-dark;
     background-color: var(--light-bg-color);
     p {
