--- a/assets/scss/components/_color-and-font.scss
+++ b/assets/scss/components/_color-and-font.scss
@@ -15,6 +15,7 @@ $theme: (
     text-color-normal: #333333, // soft black
     text-color-dark: #000000, // black
     text-color-light: #666666, // soft black
+    text-color-blog: #067934 // dark green
     border-color: #E8E9EB, // light grey
     shadow: 0px 5px 25px 0px rgba(0,0,0, 0.1),
     code-bg: #1d2635, // darker blue
