Use proper css classes (not color variables)

--- a/assets/scss/components/_home-sections.scss
+++ b/assets/scss/components/_home-sections.scss
@@ -136,3 +136,11 @@
     height: 200px;
     margin: 0 auto;
 }
+
+.blog-meta {
+    color: var(--text-color-blog)
+}
+
+.blog-time {
+    color: var(--text-color-light)
+}
