--- a/assets/scss/components/_home-sections.scss
+++ b/assets/scss/components/_home-sections.scss
@@ -133,8 +133,8 @@
 }
 
 .featured-image-wrap img {
-    height: 200px;
-    margin: 0 auto;
+    height: 215px;
+    margin: 0 auto 20px auto;
 }
 
 .blog-meta {
