Blog links to blog page

--- a/home.hbs
+++ b/home.hbs
@@ -14,7 +14,7 @@
                             <img src="{{feature_image}}" alt="{{name}}" class="topic-image">
                         </div>
                         {{/if}}
-                        <span class="blog-meta">Blog <br />
+                        <span class="blog-meta"><a href="/topic/blog">Blog</a><br />
                         {{#foreach authors limit="1"}}
                             {{name}}
                         {{/foreach}}
