Use blog image instaed of feature image

--- a/assets/scss/components/_home-sections.scss
+++ b/assets/scss/components/_home-sections.scss
@@ -132,7 +132,7 @@
     margin-top: 3rem;
 }
 
-.featured-image-wrap img {
+.blog-image-wrap img {
     height: 215px;
     margin: 0 auto 20px auto;
 }
