--- a/home.hbs
+++ b/home.hbs
@@ -10,7 +10,7 @@
                     {{#foreach posts visibility="all"}}
                      <div class="col-lg-4">
                         {{#if feature_image}}
-                        <div class="featured-image-wrap">
+                        <div class="blog-image-wrap">
                             <img src="{{feature_image}}" alt="{{name}}" class="topic-image">
                         </div>
                         {{/if}}
