--- a/home.hbs
+++ b/home.hbs
@@ -6,7 +6,7 @@
             <div class="row">
                 {{#get "tags" limit="all" include="count.posts" order="published_at asc" filter="slug:blog"}}
                 {{#foreach tags}}
-                    {{#get "posts" include="authors" filter="tag:{{slug}}+visibility:[public,members,paid]" limit="3" order="published_at asc"}}
+                    {{#get "posts" include="authors" filter="tag:{{slug}}+visibility:[public,members,paid]" limit="3" order="published_at desc"}}
                     {{#foreach posts visibility="all"}}
                      <div class="col-lg-4">
                         {{#if feature_image}}
