--- a/assets/scss/components/_common.scss
+++ b/assets/scss/components/_common.scss
@@ -64,6 +64,7 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id] {
 }
 .hero-title {
 	font-size: 2.75rem; //44
+	font-weight: 400;
 	}
 a {
 	text-decoration: none;
