--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -25,8 +25,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 offset-md-2">
-                    <h1 class="hero-title text-center">Welcome! This is the <br> 
-                    okctl documentation site</h1>
+                    <h1 class="hero-title text-center">Welcome!<br>
+                    This is the okctl documentation site</h1>
                     <div class="form-wrap">
                         <form class="hero-search js-search-form">
                             <div class="input-wrap">
