--- a/partials/footer-nav.hbs
+++ b/partials/footer-nav.hbs
@@ -1,5 +1,5 @@
-// <nav class="secondary-nav text-center">
-//    <ul>
-//        {{navigation type="secondary"}}
-//    </ul>
-// </nav>
+<nav class="secondary-nav text-center">
+   <ul>
+       {{navigation type="secondary"}}
+   </ul>
+</nav>
