--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -2,7 +2,7 @@
     <div class="footer-bottom">
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <!-- div class="col-12"> // decided to remove the "Data & privacy Contact Contribute →"-links
                     {{> footer-nav}}
                 </div>
                 <div class="col-12">
