Blog image with white background and some padding

--- a/assets/scss/components/_home-sections.scss
+++ b/assets/scss/components/_home-sections.scss
@@ -132,6 +132,13 @@
     margin-top: 3rem;
 }
 
+
+.blog-image-wrap {
+    width: 100%;
+    background-color: white;
+    padding: 20px;
+}
+
 .blog-image-wrap img {
     height: 215px;
     margin: 0 auto 20px auto;
