--- a/assets/scss/components/_color-and-font.scss
+++ b/assets/scss/components/_color-and-font.scss
@@ -17,7 +17,7 @@ $theme: (
     text-color-light: #666666, // soft black
     text-color-blog: #067934, // dark green
     border-color: #E8E9EB, // light grey
-    shadow: 0px 5px 25px 0px rgba(0,0,0, 0.1),
+//    shadow: 0px 5px 25px 0px rgba(0,0,0, 0.1), // removing shadows
     code-bg: #1d2635, // darker blue
     code-header: #060d18, // black with hint of blue
     success: #0ca910, // signal green
