--- a/assets/scss/components/_common.scss
+++ b/assets/scss/components/_common.scss
@@ -65,6 +65,9 @@ h1[id], h2[id], h3[id], h4[id], h5[id], h6[id] {
 .hero-title {
 	font-size: 2.875rem; //46	
 	}
+.subtitle {
+	font-size: 2rem; //32	
+	}
 a {
 	text-decoration: none;
 }
