--- a/assets/scss/components/_hero-area.scss
+++ b/assets/scss/components/_hero-area.scss
@@ -7,6 +7,11 @@
     margin-top: 0;
     margin-bottom: 3rem;
 }
+.subtitle {
+    color: var(--text-color-light);
+    margin-top: 0;
+    margin-bottom: 3rem;
+}
 .form-wrap {
     position: relative;
 }
