--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -25,8 +25,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 offset-md-2">
-                    <h1 class="hero-title text-center">Welcome, this is the okctl</h1>
-                    <div class="subtitle text-center">testing subtitle
+                    <h1 class="hero-title text-center">Welcome, this is Okctl</h1>
+                    <div class="subtitle text-center">a CLI for creating a production environment on Amazon Web Services (AWS)<br>
+                    using Elastic Kubernetes Service (EKS) as its foundation
                     </div>
                     <div class="form-wrap">
                         <form class="hero-search js-search-form">
