--- a/assets/scss/components/_hero-area.scss
+++ b/assets/scss/components/_hero-area.scss
@@ -8,7 +8,7 @@
     margin-bottom: 1rem;
 }
 .subtitle {
-    color: var(--text-color-light);
+    color: var(--text-color-dark);
     margin-top: 0;
     margin-bottom: 3rem;
 }
