--- a/assets/scss/components/_hero-area.scss
+++ b/assets/scss/components/_hero-area.scss
@@ -3,12 +3,12 @@
     padding-bottom: 10rem;
 }
 .hero-title {
-    color: var(--text-color-dark);
+    color: var(--text-color-normal);
     margin-top: 0;
-    margin-bottom: 1rem;
+    margin-bottom: 0rem;
 }
 .subtitle {
-    color: var(--text-color-dark);
+    color: var(--text-color-normal);
     margin-top: 0;
     margin-bottom: 3rem;
 }
