--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-md-8 offset-md-2">
                     <h1 class="hero-title text-center">Welcome, this is Okctl</h1>
-                    <div class="subtitle text-center">a CLI for creating a production environment on Amazon Web Services (AWS) using Elastic Kubernetes Service (EKS) as its foundation
+                    <div class="subtitle text-left">- a CLI for creating a production environment on Amazon Web Services (AWS) using Elastic Kubernetes Service (EKS) as its foundation
                     </div>
                     <div class="form-wrap">
                         <form class="hero-search js-search-form">
