--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -27,7 +27,11 @@
                 <div class="col-md-8 offset-md-2">
                     <h1 class="hero-title text-center">Welcome, this is Okctl</h1>
                     <div class="subtitle text-left">- a CLI for creating a production environment on Amazon Web Services (AWS) using Elastic Kubernetes Service (EKS) as its foundation. <br>
-                    <a href=https://www.okctl.io/okctl-opinionated-and-effortless-infrastructure-and-application-management/>Read more about it here</a>
+                    <a href=https://www.okctl.io/okctl-opinionated-and-effortless-infrastructure-and-application-management>
+                    <p style="#333333">
+                    Read more about it here
+                    </p>
+                    </a>
                     </div>
                     <div class="form-wrap">
                         <form class="hero-search js-search-form">
