--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -28,7 +28,7 @@
                     <h1 class="hero-title text-center">Welcome, this is Okctl</h1>
                     <div class="subtitle text-left">- a CLI for creating a production environment on Amazon Web Services (AWS) using Elastic Kubernetes Service (EKS) as its foundation. <br>
                     <a href=https://www.okctl.io/okctl-opinionated-and-effortless-infrastructure-and-application-management>
-                    <p style="#333333">
+                    <p style=#333333>
                     Read more about it here
                     </p>
                     </a>
