--- a/home.hbs
+++ b/home.hbs
@@ -26,7 +26,7 @@
                             <h2 class="h3 topic-name"><a href="{{url}}">{{title}}</a></h2>
                             {{#if excerpt}}
                             <p class="topic-description">
-                                {{excerpt}} <a href="{{url}}">... Read more</a>
+                                {{excerpt}} ... <a href="{{url}}">Read more</a>
                             </p>
                             {{/if}}
                         </div>
