--- a/tag.hbs
+++ b/tag.hbs
@@ -12,7 +12,7 @@
                 </div> -->
                 {{/tag}}
                 <div class="post-list-wrap">
-                    {{#if featured}}
+                    {{#if tags slug="blog"}}
                         <div style="color:red">&nbsp;</div>
                     {{else}}
                         <div style="color:green">&nbsp;</div>
