--- a/tag.hbs
+++ b/tag.hbs
@@ -13,23 +13,32 @@
                 {{/tag}}
                 <div class="post-list-wrap">
                     {{#if tag slug="blog"}}
-                        {{get "posts" filter="tag:{{tag.slug}}" limit="all" order="published_at desc"}}
+                        {{#get "posts" filter="tag:{{tag.slug}}" limit="all" order="published_at desc"}}
+                            {{#foreach posts visibility="all"}}
+                                    <div class="post-card">
+                                        <a href="{{url}}">
+                                            <h2 class="post-title h4">{{title}}{{> icons/arrow-forward}}</h2>
+                                            <div class="excerpt">
+                                                {{excerpt}}
+                                            </div>
+                                        </a>
+                                    </div>
+                            {{/foreach}}
+                        {{/get}}
                     {{else}}
-                        {{get "posts" filter="tag:{{tag.slug}}" limit="all" order="codeinjection_foot asc"}}
+                        {{#get "posts" filter="tag:{{tag.slug}}" limit="all" order="codeinjection_foot asc"}}
+                            {{#foreach posts visibility="all"}}
+                                    <div class="post-card">
+                                        <a href="{{url}}">
+                                            <h2 class="post-title h4">{{title}}{{> icons/arrow-forward}}</h2>
+                                            <div class="excerpt">
+                                                {{excerpt}}
+                                            </div>
+                                        </a>
+                                    </div>
+                            {{/foreach}}
+                        {{/get}}
                     {{/if}}
-
-
-                        {{#foreach posts visibility="all"}}
-                    <div class="post-card">
-                        <a href="{{url}}">
-                            <h2 class="post-title h4">{{title}}{{> icons/arrow-forward}}</h2>
-                            <div class="excerpt">
-                                {{excerpt}}
-                            </div>
-                        </a>
-                    </div>
-                    {{/foreach}}
-                    {{/get}}
                 </div>
             </div>
         </div>
