--- a/index.hbs
+++ b/index.hbs
@@ -1,2 +1,14 @@
 {{!-- We do not need any code in this file for this theme.
 Please DO NOT DELETE this file otherwise the Ghost will show error. --}}
+
+<img class="post-image"
+     srcset="{{img_url feature_image size="xxs"}} 30w,
+            {{img_url feature_image size="xs"}} 100w,
+            {{img_url feature_image size="s"}} 300w,
+            {{img_url feature_image size="m"}} 600w,
+            {{img_url feature_image size="l"}} 1000w,
+            {{img_url feature_image size="xl"}} 2000w"
+     sizes="(max-width: 1000px) 400px, 700px"
+     src="{{img_url feature_image size="m"}}"
+     alt="{{#if feature_image_alt}}{{feature_image_alt}}{{else}}{{title}}{{/if}}"
+/>
