--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -7,13 +7,15 @@
                 {{#get "tags" limit="all" include="count.posts" order="description asc" filter="slug:-faq"}}
                 {{#foreach tags}}
                     <li id="{{slug}}"><a href="{{url}}">{{name}}</a>
-                        <ul>
-                        {{#get "posts" filter="tag:{{slug}}" limit="all" order="codeinjection_foot asc"}}
-                        {{#foreach posts visibility="all"}}
-                        <li id="{{comment_id}}" class="post-link"><a href="{{url}}">{{title}}</a></li>
-                        {{/foreach}}
-                        {{/get}}
-                        </ul>
+                        {{^has slug="blog"}}
+                            <ul>
+                                {{#get "posts" filter="tag:{{slug}}" limit="all" order="codeinjection_foot asc"}}
+                                    {{#foreach posts visibility="all"}}
+                                        <li id="{{comment_id}}" class="post-link"><a href="{{url}}">{{title}}</a></li>
+                                    {{/foreach}}
+                                {{/get}}
+                            </ul>
+                        {{/has}}
                     </li>
                 {{/foreach}}
                 {{/get}}
