🐛 Fix image size in blog post listing

--- a/tag.hbs
+++ b/tag.hbs
@@ -18,7 +18,7 @@
                                 {{#foreach posts visibility="all"}}
                                         <div class="post-card" style="display: flex;">
                                             <div class="post-card-left" style="flex: 20%; padding: 1em;">
-                                                <img src="{{img_url feature_image size="xxs"}}">
+                                                <img src="{{img_url feature_image}}">
                                             </div>
                                             <div class="post-card-right" style="flex: 80%;">
                                                 <a href="{{url}}">
